--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "butternut-user",
   "version": "0.0.1",
   "description": "Butternut backend micro-service for user API",
-  "main": "src/main.ts",
+  "main": "src/index.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/mashafrancis/butternut-user.git"
@@ -14,8 +14,8 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "nodemon --exec ts-node src/index.ts",
+    "start:dev": "node -r ts-node/register -r dotenv-safe/config src/index.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "tslint -p tsconfig.json -c tslint.json",
@@ -31,13 +31,18 @@
     "@nestjs/graphql": "^6.5.3",
     "@nestjs/platform-express": "^6.10.2",
     "apollo-server-express": "^2.9.12",
+    "async": "^3.1.0",
+    "async-exit-hook": "^2.0.1",
     "dotenv": "^8.2.0",
+    "dotenv-safe": "^8.2.0",
     "graphql": "^14.5.8",
     "graphql-tag-pluck": "^0.8.7",
     "graphql-tools": "^4.0.6",
+    "luxon": "^1.21.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.12.2",
@@ -47,11 +52,13 @@
     "@types/express": "^4.17.2",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^24.0.23",
+    "@types/luxon": "^1.21.0",
     "@types/node": "^12.12.14",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/parser": "^2.9.0",
     "eslint": "^6.7.1",
     "jest": "^24.9.0",
+    "nodemon": "^2.0.1",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.2.0",
