--- a/package.json
+++ b/package.json
@@ -30,27 +30,38 @@
     "@nestjs/core": "^6.10.2",
     "@nestjs/graphql": "^6.5.3",
     "@nestjs/platform-express": "^6.10.2",
+    "@nestjs/swagger": "^3.1.0",
     "apollo-server-express": "^2.9.12",
+    "argon2": "^0.25.1",
     "async": "^3.1.0",
     "async-exit-hook": "^2.0.1",
+    "class-validator": "^0.11.0",
+    "cls-hooked": "^4.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "dotenv-safe": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^14.5.8",
     "graphql-tag-pluck": "^0.8.7",
     "graphql-tools": "^4.0.6",
+    "helmet": "^3.21.2",
     "luxon": "^1.21.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
+    "twing": "^4.0.1",
+    "typeorm": "^0.2.20",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.12.2",
     "@nestjs/schematics": "^6.7.3",
     "@nestjs/testing": "^6.10.2",
+    "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/graphql": "^14.5.0",
+    "@types/helmet": "^0.0.45",
     "@types/jest": "^24.0.23",
     "@types/luxon": "^1.21.0",
     "@types/node": "^12.12.14",
