--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nodemon --exec ts-node src/index.ts",
     "start:dev": "node -r ts-node/register -r dotenv-safe/config src/index.ts",
+    "cli": "node -r dotenv-safe/config -r ts-node/register src/cli.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "tslint -p tsconfig.json -c tslint.json",
@@ -23,34 +24,51 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@nestjs/common": "^6.10.2",
     "@nestjs/core": "^6.10.2",
     "@nestjs/graphql": "^6.5.3",
+    "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.10.2",
     "@nestjs/swagger": "^3.1.0",
+    "@types/uuid": "^3.4.6",
     "apollo-server-express": "^2.9.12",
     "argon2": "^0.25.1",
     "async": "^3.1.0",
     "async-exit-hook": "^2.0.1",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "cls-hooked": "^4.2.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "graphql": "^14.5.8",
     "graphql-tag-pluck": "^0.8.7",
     "graphql-tools": "^4.0.6",
     "helmet": "^3.21.2",
+    "jsonwebtoken": "^8.5.1",
     "luxon": "^1.21.2",
+    "mongodb": "^3.3.5",
+    "nestjs-command": "^1.3.0",
+    "passport": "^0.4.0",
+    "passport-facebook-token": "^3.3.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
+    "pg": "^7.14.0",
+    "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
+    "swagger-ui-express": "^4.1.2",
     "twing": "^4.0.1",
     "typeorm": "^0.2.20",
+    "uuid": "^3.3.3",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -60,10 +78,13 @@
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/faker": "^4.1.7",
     "@types/graphql": "^14.5.0",
     "@types/helmet": "^0.0.45",
     "@types/jest": "^24.0.23",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/luxon": "^1.21.0",
+    "@types/mongodb": "^3.3.11",
     "@types/node": "^12.12.14",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/parser": "^2.9.0",
