--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm:migrations": "typeorm migration:generate -n Migration"
   },
   "dependencies": {
     "@nestjs/common": "^6.10.2",
     "@nestjs/core": "^6.10.2",
     "@nestjs/graphql": "^6.5.3",
+    "@nestjs/microservices": "^6.10.3",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.10.2",
     "@nestjs/swagger": "^3.1.0",
@@ -42,11 +44,13 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "cls-hooked": "^4.2.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "googleapis": "^45.0.0",
     "graphql": "^14.5.8",
     "graphql-tag-pluck": "^0.8.7",
     "graphql-tools": "^4.0.6",
@@ -55,6 +59,7 @@
     "luxon": "^1.21.2",
     "mongodb": "^3.3.5",
     "nestjs-command": "^1.3.0",
+    "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-facebook-token": "^3.3.0",
     "passport-http-bearer": "^1.0.1",
@@ -66,9 +71,10 @@
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "swagger-ui-express": "^4.1.2",
-    "twing": "^4.0.1",
+    "twing": "^2.2.3",
     "typeorm": "^0.2.20",
     "uuid": "^3.3.3",
+    "voucher-code-generator": "^1.1.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -86,6 +92,7 @@
     "@types/luxon": "^1.21.0",
     "@types/mongodb": "^3.3.11",
     "@types/node": "^12.12.14",
+    "@types/nodemailer": "^6.2.2",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/parser": "^2.9.0",
     "eslint": "^6.7.1",
