--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "cli": "node -r dotenv-safe/config -r ts-node/register src/cli.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test:unit": "jest -u --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -29,85 +29,86 @@
     "typeorm:migrations": "typeorm migration:generate -n Migration"
   },
   "dependencies": {
-    "@nestjs/common": "^6.10.2",
-    "@nestjs/core": "^6.10.2",
-    "@nestjs/graphql": "^6.5.3",
-    "@nestjs/microservices": "^6.10.3",
-    "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "^6.10.2",
-    "@nestjs/swagger": "^3.1.0",
-    "@types/uuid": "^3.4.6",
-    "apollo-server-express": "^2.9.12",
-    "argon2": "^0.25.1",
-    "async": "^3.1.0",
+    "@nestjs/common": "^7.4.4",
+    "@nestjs/core": "^7.4.4",
+    "@nestjs/graphql": "^7.7.0",
+    "@nestjs/microservices": "^7.4.4",
+    "@nestjs/passport": "^7.1.0",
+    "@nestjs/platform-express": "^7.4.4",
+    "@nestjs/swagger": "^4.6.1",
+    "@types/uuid": "^8.3.0",
+    "apollo-server-express": "^2.18.1",
+    "argon2": "^0.27.0",
+    "async": "^3.2.0",
     "async-exit-hook": "^2.0.1",
-    "class-transformer": "^0.2.3",
-    "class-validator": "^0.11.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "cls-hooked": "^4.2.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
-    "faker": "^4.1.0",
-    "googleapis": "^45.0.0",
-    "graphql": "^14.5.8",
+    "faker": "^5.1.0",
+    "googleapis": "^60.0.1",
+    "graphql": "^15.3.0",
     "graphql-tag-pluck": "^0.8.7",
-    "graphql-tools": "^4.0.6",
-    "helmet": "^3.21.2",
+    "graphql-tools": "^6.2.3",
+    "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
-    "luxon": "^1.21.2",
-    "mongodb": "^3.3.5",
-    "nestjs-command": "^1.3.0",
-    "nodemailer": "^6.3.1",
-    "passport": "^0.4.0",
-    "passport-facebook-token": "^3.3.0",
+    "luxon": "^1.25.0",
+    "mongodb": "^3.6.2",
+    "nestjs-command": "^1.5.0",
+    "nodemailer": "^6.4.11",
+    "passport": "^0.4.1",
+    "passport-facebook-token": "^4.0.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
-    "pg": "^7.14.0",
+    "pg": "^8.3.3",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.5.3",
-    "swagger-ui-express": "^4.1.2",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.3",
+    "rxjs-compat": "^6.6.3",
+    "swagger-ui-express": "^4.1.4",
     "twing": "^2.2.3",
-    "typeorm": "^0.2.20",
-    "uuid": "^3.3.3",
+    "typeorm": "^0.2.26",
+    "uuid": "^8.3.0",
     "voucher-code-generator": "^1.1.1",
-    "winston": "^3.2.1"
+    "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@nestjs/cli": "^6.12.2",
-    "@nestjs/schematics": "^6.7.3",
-    "@nestjs/testing": "^6.10.7",
-    "@types/cors": "^2.8.6",
+    "@nestjs/cli": "^7.5.1",
+    "@nestjs/schematics": "^7.1.2",
+    "@nestjs/testing": "^7.4.4",
+    "@types/cors": "^2.8.7",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.2",
-    "@types/faker": "^4.1.7",
+    "@types/express": "^4.17.8",
+    "@types/faker": "^5.1.2",
     "@types/graphql": "^14.5.0",
-    "@types/helmet": "^0.0.45",
-    "@types/jest": "^24.0.23",
-    "@types/jsonwebtoken": "^8.3.5",
-    "@types/luxon": "^1.21.0",
-    "@types/mongodb": "^3.3.11",
-    "@types/node": "^12.12.14",
-    "@types/nodemailer": "^6.2.2",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/parser": "^2.9.0",
-    "eslint": "^6.7.1",
-    "jest": "^24.9.0",
-    "nodemon": "^2.0.1",
-    "prettier": "^1.19.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.2.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.5.2",
+    "@types/helmet": "^0.0.48",
+    "@types/jest": "^26.0.14",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/luxon": "^1.25.0",
+    "@types/mongodb": "^3.5.27",
+    "@types/node": "^14.11.2",
+    "@types/nodemailer": "^6.4.0",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.0.2",
+    "supertest": "^5.0.0",
+    "ts-jest": "^26.4.0",
+    "ts-loader": "^8.0.4",
+    "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "^5.20.1",
-    "tslint-config-airbnb": "^5.11.2",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-jsdoc-rules": "^0.2.0",
-    "typescript": "^3.7.2"
+    "typescript": "^4.0.3"
   }
 }
